# sac

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: images.yml  release.yml
.thoughts/: config.json
crates/nac/: Cargo.toml
crates/nac/src/: agent.rs  agents_md.rs  api.rs  events.rs  lib.rs  logging.rs  main.rs  mcp.rs  paths.rs  sessions.rs  skills.rs  store.rs  tui.rs  types.rs
crates/nac/src/agent/: mod.rs
crates/nac/src/cli/: args.rs  config.rs  managed_worker.rs  mod.rs  non_tui.rs  resume.rs  sandbox.rs  upgrade.rs
crates/nac/src/commands/: discovery.rs  frontmatter.rs  mod.rs  registry.rs
crates/nac/src/goal/: mod.rs
crates/nac/src/mcp/: config.rs  mod.rs  registry.rs
crates/nac/src/model/: backend.rs  chatgpt_codex.rs  client.rs  mod.rs  types.rs
crates/nac/src/sandbox/: mod.rs  podman.rs
crates/nac/src/sessions/: db.rs  mod.rs  snapshot.rs
crates/nac/src/skills/: mod.rs
crates/nac/src/store/: mod.rs  schema.rs  worksets.rs
crates/nac/src/terminal/: keyparse.rs  manager.rs  mod.rs  session.rs
crates/nac/src/tools/: bash.rs  edit.rs  exec_command.rs  goal.rs  mod.rs  read.rs  terminal.rs  thread.rs  workset.rs  write.rs
crates/nac/src/tui/: app.rs  commands.rs  mod.rs  render.rs  slash_popup.rs  state.rs  terminal.rs  util.rs
crates/nac/tests/: agent_integration.rs
crates/nacserver/src/: main.rs  podman.rs  task.rs
crates/sac/: Cargo.toml
crates/sac/src/: agents_md.rs  events.rs  lib.rs  logging.rs  main.rs  paths.rs  process.rs  types.rs
crates/sac/src/agent/: mod.rs  preview.rs  tool_exec.rs
crates/sac/src/cli/: args.rs  (+5 more)
crates/sac/tests/: agent_integration.rs
images/: Dockerfile.base  Dockerfile.python
scripts/: install.sh  test-e2e.sh  uninstall.sh
src/: agent.rs  api.rs  lib.rs  main.rs  types.rs
src/tools/: bash.rs  edit.rs  mod.rs  read.rs  write.rs
tests/: agent_integration.rs
(+60 files in other folders)
